@@ -18,7 +18,7 @@ install-cfg:
 
 uninstall-cfg:
 	@$(NORMAL_UNINSTALL)
-	@if test $(PLAINTEX) != no ; then \
-	  installdir=`kpsexpand '$$TEXMFLOCAL'/tex/latex/gnuplot |sed "s%^.*share/%$(prefix)/share/%"` ; \
-	  rm -f "$(DESTDIR)$$installdir/gnuplot.cfg" ; \
-	fi
+#	@if test $(PLAINTEX) != no ; then \
+#	  installdir=`kpsexpand '$$TEXMFLOCAL'/tex/latex/gnuplot |sed "s%^.*share/%$(prefix)/share/%"` ; \
+#	  rm -f "$(DESTDIR)$$installdir/gnuplot.cfg" ; \
+#	fi
